Fixed leading whitespace for #main

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,23 +219,22 @@
 			opacity: 0;
 		}
 
-	#main .links {
-		text-align: center;
-		padding: .5em 1.6em 0 0;
-		font-size: .9em;
-	}
-
-		#main .links li {
-			display: inline-block;
-			padding: 0 .25em 0 .75em;
-			border-left: solid 2px rgba(105, 105, 105, 0.4);
-			line-height: 1;
+		#main .links {
+			text-align: center;
+			padding: .5em 1.6em 0 0;
+			font-size: .9em;
 		}
 
-			#main .links li:first-child {
-				border-left: 0;
+			#main .links li {
+				display: inline-block;
+				padding: 0 .25em 0 .75em;
+				border-left: solid 2px rgba(105, 105, 105, 0.4);
+				line-height: 1;
 			}
-	}
+
+				#main .links li:first-child {
+					border-left: 0;
+				}
 
 /* Footer */
 
